# ml-crash-course

./: README.md  pyproject.toml
1-Data-Preprocessing/: data-preprocessing-template.py  data-preprocessing-tools.py
2-Data-Preprocessing/: data-preprocessing-template.py  data-preprocessing-tools.py
2-Regression/2-multiple-lr/: multiple-lr.py
