[tool.poetry]
name = "ml-crash-course"
version = "0.1.0"
description = "This repository contains code for Machine Learning A-Z™: Hands-On Python & R In Data Science Udemy course."
authors = ["Xenomii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
